Added another game

--- a/index.html
+++ b/index.html
@@ -51,13 +51,21 @@
         </div>
 
         <div class="container" id="Jeu2">
+            <a href="https://store.steampowered.com/app/2102200/Let_Chat_Guess/" target="_blank"><img src="media/LetChat.png" alt="Let Chat Guess"></a>
+            <div class="txtImg">
+                <h2>Let Chat Guess</h2>
+                <p>Voici le deuxième jeu Steam que j'ai créé !</p>
+            </div>
+        </div>
+
+        <div class="container" id="Jeu3">
             <a href="https://kilz-knight.itch.io/prop-hunt" target="_blank"><img src="media/PropHunt.png" alt="Prop Hunt"></a>
             <div class="txtImg">
                 <h2>Online Multiplayer Hide and Seek - Prop Hunt</h2>
                 <p>Voici l'un des premier jeu multijoueurs que j'ai réalisé ! <br> Il s'agit ici d'un jeu prop hunt, un jeu dans lequel un personnage doit se cacher en ayant le pouvoir de se transformer en n'importe quel objet de la carte ! Le deuxième joueur lui, doit essayer de le trouver ! Afin de facilité la tâche au chasseur, la personne se cachant emmet un sifflement chaque 30 secondes et saute à chaque minute !</p>
             </div>
         </div>
-        <div class="container" id="Jeu3">
+        <div class="container" id="Jeu4">
             <a href="https://kilz-knight.itch.io/elementaris" target="_blank"><img src="media/Elementaris.png" alt="Elementaris"></a>
             <div class="txtImg">
                 <h2>Elementaris - (Tower Defense)</h2>
@@ -66,7 +74,7 @@
         </div>
 
 
-        <div class="container" id="Jeu4">
+        <div class="container" id="Jeu5">
             <a href="https://kilz-knight.itch.io/destruction-game" target="_blank"><img src="media/destru.png" alt="Destruction game"></a>
             <div class="txtImg">
                 <h2>Destruction game</h2>
@@ -74,14 +82,14 @@
             </div>
         </div>
 
-        <div class="container" id="Jeu5">
+        <div class="container" id="Jeu6">
             <a href="https://kilz-knight.itch.io/the-last-capsule" target="_blank"><img src="media/Capsule.png" alt="The Last Capsule"></a>
             <div class="txtImg">
                 <h2>The Last Capsule</h2>
                 <p>Voici un jeu qui vous permettra de pratiquer votre visée ! Affrontez des hordes d'ennemis qui ne souhaite que votre mort ! Le but du jeu est simple, survivre à des vagues d'ennemis à l'aide de votre fusil ! Jouez au mode Histoire ou au mode Infini qui vous permettra d'établir des records d'ennemis tués !</p>
             </div>
         </div>
-        <div class="container" id="Jeu6">
+        <div class="container" id="Jeu7">
             <a href="https://kilz-knight.itch.io/the-impossible-shooting-game" target="_blank"><img src="media/jeushooting.png" alt="The Impossible Shooting Game"></a>
             <div class="txtImg">
                 <h2>The Impossible Shooting Game</h2>
@@ -90,7 +98,7 @@
         </div>
 
         <h2 class="entete" id="JM">Jeux mobiles</h2>
-        <div class="container" id="Jeu7">
+        <div class="container" id="Jeu8">
             <a href="https://play.google.com/store/apps/details?id=com.KilzKnight.TheImpossibleJumpingGame" target="_blank"><img src="media/ImpoJump.png" alt="The Impossible Jumping Game"></a>
             <div class="txtImg">
                 <h2>The Impossible Jumping Game</h2>
@@ -98,7 +106,7 @@
             </div>
         </div>
 
-        <div class="container" id="Jeu8">
+        <div class="container" id="Jeu9">
             <a href="https://play.google.com/store/apps/details?id=com.KilzKnight.TheImpossibleFlippingGame" target="_blank"><img src="media/ImpoFlip.png" alt="The Impossible Flipping Game"></a>
             <div class="txtImg">
                 <h2>The Impossible Flipping Game</h2>
