Updated game description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="https://store.steampowered.com/app/1604450/AI_Battle_Royale_Generator/" target="_blank"><img src="media/AIBR.png" alt="AI Battle Royale Generator"></a>
             <div class="txtImg">
                 <h2>AI Battle Royale Generator</h2>
-                <p>Voici le premier jeu que j'ai sorti sur Steam ! Ce jeu est le plus complet de tous mes jeux ! </p>
+                <p>Voici le premier jeu que j'ai sorti sur Steam ! Ce jeu est le plus complet de tous mes jeux ! Dans ce jeu vous générez vos propres Battle Royale d'Intelligence Artificielle ayant été entrainées en utilisant le machine learning! Si vous êtes un streamer Twitch.tv, vos spectateurs peuvent créer leur propre IA et rejoindre la bataille! Il y a plus de 100 millions de cartes jouables! </p>
             </div>
         </div>
 
@@ -54,7 +54,7 @@
             <a href="https://store.steampowered.com/app/2102200/Let_Chat_Guess/" target="_blank"><img src="media/LetChat.png" alt="Let Chat Guess"></a>
             <div class="txtImg">
                 <h2>Let Chat Guess</h2>
-                <p>Voici le deuxième jeu Steam que j'ai créé !</p>
+                <p>Voici le deuxième jeu Steam que j'ai créé ! Dans ce jeu interractif avec Twitch, le chat des Streamers essait de deviner la distance que parcourra le personnage catapulté!</p>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
             <a href="https://kilz-knight.itch.io/prop-hunt" target="_blank"><img src="media/PropHunt.png" alt="Prop Hunt"></a>
             <div class="txtImg">
                 <h2>Online Multiplayer Hide and Seek - Prop Hunt</h2>
-                <p>Voici l'un des premier jeu multijoueurs que j'ai réalisé ! <br> Il s'agit ici d'un jeu prop hunt, un jeu dans lequel un personnage doit se cacher en ayant le pouvoir de se transformer en n'importe quel objet de la carte ! Le deuxième joueur lui, doit essayer de le trouver ! Afin de facilité la tâche au chasseur, la personne se cachant emmet un sifflement chaque 30 secondes et saute à chaque minute !</p>
+                <p>Voici l'un des premier jeu multijoueurs en ligne que j'ai réalisé ! <br> Il s'agit ici d'un jeu prop hunt, un jeu dans lequel un personnage doit se cacher en ayant le pouvoir de se transformer en n'importe quel objet de la carte ! Le deuxième joueur lui, doit essayer de le trouver ! Afin de facilité la tâche au chasseur, la personne se cachant emmet un sifflement chaque 30 secondes et saute à chaque minute !</p>
             </div>
         </div>
         <div class="container" id="Jeu4">
